--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
       <!-- index.html -->
     
 </head>
-<body>
+<body style="background-color : #7599b3">
   <app-root>Loading...</app-root>
 <script type="text/javascript" src="{% static 'inline.bundle.js' %}"></script>
 <script type="text/javascript" src="{% static 'polyfills.bundle.js' %}"></script>
