--- a/eventicoUI/src/app/app.component.html
+++ b/eventicoUI/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-  <app-register></app-register>
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
