--- a/eventicoUI/src/app/header/header.component.html
+++ b/eventicoUI/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-light bg-faded">
   <ul class="nav navbar-nav">
     <li class="nav-item active">
-      <a class="nav-link" href="">Home</a>
+      <a class="nav-link" routerLink="">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/signup">Signup</a>
+      <a class="nav-link" routerLink="signup">Signup</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/login">login</a>
+      <a class="nav-link" routerLink="login">login</a>
     </li>
   </ul>
 </nav>
