--- a/eventicoUI/src/styles.css
+++ b/eventicoUI/src/styles.css
@@ -1,20 +1,6 @@
-div.sm-jumbotron{
-  margin: 0px;
-  background-color: #38547b;
-  color: #fff;
-}
-
-button.btn-submit{
-  background-color: #38547b;
-  color: #fff;
-  width: 100%;
-}
-
-button.btn-submit:focus, button.btn-submit:hover{
-  background-color: #38547b;
-}
-
-input.ng-invalid.ng-dirty{
-  border-bottom-color: #e91e63 !important;
-  box-shadow: 0 1px 0 0 #e91e63 !important;
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+body
+{
+   margin: 0px;
+   padding: 0px;
 }
