--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,22 @@
 {% load static %}
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Home</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-      <!-- index.html -->
-    
+  <meta charset="utf-8">
+  <title>Eventico</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body style="background-color : #7599b3">
-  <app-root>Loading...</app-root>
+<body>
+  <app-root>
+  </app-root>
+  <!-- Compiled and minified JavaScript -->
 <script type="text/javascript" src="{% static 'inline.bundle.js' %}"></script>
 <script type="text/javascript" src="{% static 'polyfills.bundle.js' %}"></script>
 <script type="text/javascript" src="{% static 'styles.bundle.js' %}"></script>
 <script type="text/javascript" src="{% static 'vendor.bundle.js' %}"></script>
-<script type="text/javascript" src="{% static 'main.bundle.js' %}"></script></body>
-
+<script type="text/javascript" src="{% static 'main.bundle.js' %}"></script>
+</body>
 </html>
