--- a/eventicoUI/src/app/header/header.component.html
+++ b/eventicoUI/src/app/header/header.component.html
@@ -11,6 +11,7 @@
 <mat-toolbar *ngIf="adminToolBar['allowed'] == true" class="admin-toolbar">
   <i class="material-icons md-dark">supervisor_account</i>
   <button mat-button routerLink="event/new"><i class="material-icons md-dark">playlist_add</i> New Event</button>
+  <button mat-button routerLink="event-types"><i class="material-icons md-dark">find_replace</i> Event Types</button>
   <span class="admin-tollbar-spacer"></span>
   <button mat-button routerLink=""><i class="material-icons md-dark">find_replace</i> User Management</button>
   <button mat-button routerLink=""><i class="material-icons md-dark">cloud_download</i> Reports</button>
