--- a/eventicoUI/src/app/events/events.component.css
+++ b/eventicoUI/src/app/events/events.component.css
@@ -6,3 +6,17 @@
   background-image: url('https://ibb.co/jNkMT8');
   background-size: cover;
 }
+
+.events-filter-toolbar
+{
+  margin-top : 20px;
+}
+
+.tollbar-splitter
+{
+  flex: 1 1 auto;
+}
+
+mat-form-field.mat-form-field {
+  font-size: 14px;
+}
