--- a/eventicoUI/src/app/events/new-event/new-event.component.html
+++ b/eventicoUI/src/app/events/new-event/new-event.component.html
@@ -1,3 +1,27 @@
-<p>
-  new-event works!
-</p>
+<mat-card class="new-event-card">
+  <mat-card-title class="new-event-card-title">New Event</mat-card-title>
+  <form class="new-event-form" #eventCreationForm="ngForm" (ngSubmit)="onSubmit(eventCreationForm)">
+  <mat-card-content>
+      <mat-form-field class="full-width">
+        <input matInput placeholder="Name" #Name="ngModel" [(ngModel)]="event.Name" name="Name" required>
+      </mat-form-field>
+        <mat-form-field class="full-width">
+        <textarea matInput placeholder="Description" #Desc="ngModel" [(ngModel)]="event.Desc" name="Description" required></textarea>
+      </mat-form-field>
+      <mat-form-field>
+      <mat-select placeholder="Select EventType">
+          <mat-option *ngFor="let eventType of eventTypes" value="{{eventType.Id}}">{{eventType.Name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <input type="file" id="myFile">
+      <mat-checkbox  [(ngModel)]="event.IsLayoutBased" [ngModelOptions]="{standalone: true}">Is Layout Based</mat-checkbox>
+    <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
+  </mat-card-content>
+    <mat-card-content *ngIf="event.IsLayoutBased == true">
+      Screen Here
+    </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button type="submit" class="full-width" color="primary">CREATE</button>
+  </mat-card-actions>
+  </form>
+</mat-card>
