event venue creation and edit

--- a/eventicoUI/src/app/event-types/event-types.component.html
+++ b/eventicoUI/src/app/event-types/event-types.component.html
@@ -4,7 +4,7 @@
       <input matInput type="text" placeholder="Search">
     </mat-form-field>
     <span class="tollbar-splitter"></span>
-    <button mat-button routerLink="new"><i class="material-icons md-dark">playlist_add</i> New Event Type</button>
+    <button mat-button routerLink="event-type"><i class="material-icons md-dark">playlist_add</i> New Event Type</button>
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-divider></mat-divider>
