--- a/eventicoUI/src/app/footer/footer.component.html
+++ b/eventicoUI/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar class="footer" color='primary'>
-  <span class='spacer'></span>
-    <h3>© Copyright Eventico Pvt Ltd 2018.</h3>
-  <span class='spacer'></span>
-</mat-toolbar>
+<!--<mat-toolbar class="footer" color='primary'>-->
+  <!--<span class='spacer'></span>-->
+    <!--<h3>© Copyright Eventico Pvt Ltd 2018.</h3>-->
+  <!--<span class='spacer'></span>-->
+<!--</mat-toolbar>-->
