--- a/eventicoUI/src/app/events/events.component.html
+++ b/eventicoUI/src/app/events/events.component.html
@@ -1,51 +1,17 @@
-<!--<mat-card class="example-card">-->
-      <!--<mat-card-header>-->
-        <!--<mat-card-title>Event Name</mat-card-title>-->
-        <!--<mat-card-subtitle>Event subtitle</mat-card-subtitle>-->
-      <!--</mat-card-header>-->
-      <!--<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
-      <!--<mat-card-content>-->
-        <!--<p>-->
-          <!--The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.-->
-          <!--A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally-->
-          <!--bred for hunting.-->
-        <!--</p>-->
-      <!--</mat-card-content>-->
-      <!--<mat-card-actions>-->
-        <!--<button mat-button>Book</button>-->
-        <!--<button mat-button>SHARE</button>-->
-        <!--<button mat-button>ACTIVATE</button>-->
-        <!--<button mat-button>EDIT</button>-->
-      <!--</mat-card-actions>-->
-    <!--</mat-card>-->
-<!--<mat-card class="example-card">-->
-      <!--<mat-card-header>-->
-        <!--<mat-card-title>Event Name</mat-card-title>-->
-        <!--<mat-card-subtitle>Event subtitle</mat-card-subtitle>-->
-      <!--</mat-card-header>-->
-      <!--<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
-      <!--<mat-card-content>-->
-        <!--<p>-->
-          <!--The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.-->
-          <!--A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally-->
-          <!--bred for hunting.-->
-        <!--</p>-->
-      <!--</mat-card-content>-->
-      <!--<mat-card-actions>-->
-        <!--<button mat-button>Book</button>-->
-        <!--<button mat-button>SHARE</button>-->
-        <!--<button mat-button>ACTIVATE</button>-->
-        <!--<button mat-button>EDIT</button>-->
-      <!--</mat-card-actions>-->
-    <!--</mat-card>-->
-
 <mat-toolbar class="events-filter-toolbar">
   <mat-toolbar-row>
     <mat-form-field>
-    <mat-select placeholder="Select">
-      <mat-option value="option">Option</mat-option>
-    </mat-select>
-  </mat-form-field>
+    <input type="text" placeholder="Search Events" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+    <mat-autocomplete #auto="matAutocomplete">
+      <mat-option *ngFor="let option of options" [value]="option">
+        {{ option }}
+      </mat-option>
+    </mat-autocomplete>
+    </mat-form-field>
+    <mat-divider [vertical]="true"></mat-divider>
+    <mat-divider [vertical]="true"></mat-divider>
+    <mat-divider [vertical]="true"></mat-divider>
+    <mat-divider [vertical]="true"></mat-divider>
     <mat-divider [vertical]="true"></mat-divider>
     <mat-form-field>
   <input matInput [matDatepicker]="picker" placeholder="Choose a date">
