--- a/eventicoUI/src/app/header/header.component.html
+++ b/eventicoUI/src/app/header/header.component.html
@@ -1,18 +1,35 @@
 <mat-toolbar class="header" color="primary">
   <mat-toolbar-row>
     <button mat-button routerLink="">Eventico</button>
-    <button mat-button routerLink=""><i class="material-icons md-18">home</i></button>
+    <button mat-icon-button routerLink=""><mat-icon aria-label="home">home</mat-icon></button>
+
     <span class="tollbar-splitter"></span>
-    <button *ngIf="loggedIn" mat-button (click)="logout()" >LOGOUT</button>
+    <button *ngIf="loggedIn" mat-icon-button ><mat-icon aria-label="Settings">settings</mat-icon></button>
+    <button *ngIf="loggedIn" mat-icon-button (click)="logout()"><mat-icon aria-label="Settings">exit_to_app</mat-icon></button>
     <button *ngIf="loggedIn == false" mat-button routerLink="login">LOGIN</button>
     <button *ngIf="loggedIn == false" mat-button routerLink="signup">SIGNUP</button>
+    <mat-menu *ngIf="loggedIn" #notifications="matMenu">
+      <button mat-menu-item>notification 1</button>
+      <button mat-menu-item>notification 2</button>
+    </mat-menu>
+
+    <button *ngIf="loggedIn" mat-icon-button [matMenuTriggerFor]="notifications">
+      <mat-icon>notifications</mat-icon>
+    </button>
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-toolbar *ngIf="adminToolBar['allowed'] == true" class="admin-toolbar">
   <i class="material-icons md-dark">supervisor_account</i>
-  <button mat-button routerLink="event/new"><i class="material-icons md-dark">playlist_add</i> New Event</button>
-  <button mat-button routerLink="event-types"><i class="material-icons md-dark">find_replace</i> Event Types</button>
+  <button mat-button routerLink="events/event"><mat-icon aria-label="Settings">playlist_add</mat-icon> <span class="responsive_span_text">New Event</span> </button>
+  <button mat-button routerLink="event-types"><mat-icon aria-label="Settings">table_chart</mat-icon> <span class="responsive_span_text">Event Types</span> </button>
+  <button mat-button routerLink="event-venues"><mat-icon aria-label="Settings">movie_creation</mat-icon> <span class="responsive_span_text">Event Venues</span></button>
   <span class="admin-tollbar-spacer"></span>
-  <button mat-button routerLink=""><i class="material-icons md-dark">find_replace</i> User Management</button>
-  <button mat-button routerLink=""><i class="material-icons md-dark">cloud_download</i> Reports</button>
+  <mat-menu class="addon-tools" #addon_tools="matMenu">
+    <button mat-menu-item routerLink=""><mat-icon aria-label="Settings">find_replace</mat-icon> User Management</button>
+    <button mat-menu-item routerLink=""><mat-icon aria-label="Settings">cloud_download</mat-icon> Reports</button>
+  </mat-menu>
+
+  <button class="addon-tools" mat-icon-button [matMenuTriggerFor]="addon_tools">
+    <mat-icon>more_vert</mat-icon>
+  </button>
 </mat-toolbar>
