--- a/eventicoUI/src/app/header/header.component.html
+++ b/eventicoUI/src/app/header/header.component.html
@@ -8,14 +8,17 @@
     <button *ngIf="loggedIn" mat-icon-button (click)="logout()"><mat-icon aria-label="Settings">exit_to_app</mat-icon></button>
     <button *ngIf="loggedIn == false" mat-button routerLink="login">LOGIN</button>
     <button *ngIf="loggedIn == false" mat-button routerLink="signup">SIGNUP</button>
-    <mat-menu *ngIf="loggedIn" #notifications="matMenu">
+    <div *ngIf="loggedIn">
+    <mat-menu #notifications="matMenu" yPosition="below" xPosition="before">
       <button mat-menu-item>notification 1</button>
       <button mat-menu-item>notification 2</button>
     </mat-menu>
-
-    <button *ngIf="loggedIn" mat-icon-button [matMenuTriggerFor]="notifications">
+    <button mat-icon-button [matMenuTriggerFor]="notifications" *ngIf="loggedIn">
       <mat-icon>notifications</mat-icon>
     </button>
+    </div>
+
+
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-toolbar *ngIf="adminToolBar['allowed'] == true" class="admin-toolbar">
@@ -24,7 +27,7 @@
   <button mat-button routerLink="event-types"><mat-icon aria-label="Settings">table_chart</mat-icon> <span class="responsive_span_text">Event Types</span> </button>
   <button mat-button routerLink="event-venues"><mat-icon aria-label="Settings">movie_creation</mat-icon> <span class="responsive_span_text">Event Venues</span></button>
   <span class="admin-tollbar-spacer"></span>
-  <mat-menu class="addon-tools" #addon_tools="matMenu">
+  <mat-menu #addon_tools="matMenu" class="addon-tools" yPosition="below" xPosition="before">
     <button mat-menu-item routerLink=""><mat-icon aria-label="Settings">find_replace</mat-icon> User Management</button>
     <button mat-menu-item routerLink=""><mat-icon aria-label="Settings">cloud_download</mat-icon> Reports</button>
   </mat-menu>
